# mlops-experiment

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/mlops_experiment/: __init__.py
tests/: test_mlops_experiment.py
